# SoL-euler-3D

./: .gitmodules  CMakeLists.txt  README.md  param.ini
src/: benchmark.h  benchmark.hpp  boundary_conditions.h  compute_dt.h  config.h  declarations.h  declarations.hpp  deprecated.cpp  initialize.h  main.cu  time_step.h
